--- a/update_windows.yml
+++ b/update_windows.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: windows
+- hosts: windows_servers
   name: This is my Windows patching playbook
   tasks:
     - name: Install Windows Updates
