--- a/update_windows.yml
+++ b/update_windows.yml
@@ -1,6 +1,7 @@
 ---
 - hosts: windows_servers
   name: This is my Windows patching playbook
+  serial: 1
   tasks:
     - name: Install Windows Updates
       win_updates:
