--- a/updates_by_file.yml
+++ b/updates_by_file.yml
@@ -1,24 +1,37 @@
 ---
-- name: Update Windows machines with specific KB numbers
-  hosts: windows_uat
-  gather_facts: no
+- name: Update Windows machine with KB numbers from a GitHub file
+  hosts: windows
+  vars:
+    github_user: "your-github-username"
+    github_repo: "your-repository"
+    file_path: "path/to/your/kb-file.txt"
+    github_token: "your-github-personal-access-token"
 
   tasks:
+    - name: Download KB numbers file from GitHub
+      get_url:
+        url: "https://raw.githubusercontent.com/nmartins0611/windows_wsus_Demo/main/updates.txt"
+        dest: "./kb_numbers.txt"
+     #   headers: "Authorization: token {{ github_token }}"
+      delegate_to: localhost
+
     - name: Read KB numbers from file
-      ansible.builtin.slurp:
-        src: "updates.txt"
-      register: kb_content
+      read_csv:
+        path: "./kb_numbers.txt"
+        delimiter: "\n"
+      register: kb_list
 
-    - name: Convert KB content from base64
-      ansible.builtin.set_fact:
-        kb_list: "{{ (kb_content['content'] | b64decode).split() }}"
-
-    - name: Install specific updates from KB numbers
-      ansible.windows.win_updates:
-        category_names: SecurityUpdates
-        whitelist: "{{ kb_list }}"
+    - name: Install updates by KB numbers
+      win_updates:
+        category_names: ['SecurityUpdates', 'CriticalUpdates']
+        whitelist:
+          "{{ item }}"
+      loop: "{{ kb_list.list | map(attribute='column0') | list }}"
       register: update_result
 
-    - name: Display update result
-      ansible.builtin.debug:
-        msg: "{{ update_result }}"
+    - name: Display update results
+      debug:
+        msg: "The update result for {{ item.item }} is {{ item }}"
+      loop: "{{ update_result.results }}"
+      when: update_result is changed
+
