--- a/updates_by_file.yml
+++ b/updates_by_file.yml
@@ -20,6 +20,7 @@
         path: "./kb_numbers.txt"
         delimiter: "\n"
       register: kb_list
+      delegate_to: localhost
 
     - name: Install updates by KB numbers
       win_updates:
