--- a/update_by_kb.yml
+++ b/update_by_kb.yml
@@ -8,7 +8,7 @@
     - name: Install specific Windows update
       win_updates:
         category_names: ['SecurityUpdates', 'CriticalUpdates', 'UpdateRollups']
-        whitelist:
+        accept_list:
           - "{{ kb_number }}"
       register: update_result
 
