--- a/app_iis.yml
+++ b/app_iis.yml
@@ -12,18 +12,18 @@
     iis_test_message: "Hello World!  My test IIS Server"
 
   tasks:
-    - name: Install IIS
+    - name: Ensure IIS is enabled
       ansible.windows.win_feature:
         name: Web-Server
         state: present
 
-    - name: Create site directory structure
+    - name: Check Site structure
       ansible.windows.win_file:
         path: "{{ item.path }}"
         state: directory
       with_items: "{{ iis_sites }}"
 
-    - name: Create IIS site
+    - name: Ensure Site is available
       community.windows.win_iis_website:
         name: "{{ item.name }}"
         state: started
@@ -32,7 +32,7 @@
       with_items: "{{ iis_sites }}"
       notify: restart iis service
 
-    - name: Open port for site on the firewall
+    - name: Ensure Ports are open
       community.windows.win_firewall_rule:
         name: "iisport{{ item.port }}"
         enable: true
@@ -43,7 +43,7 @@
         protocol: Tcp
       with_items: "{{ iis_sites }}"
 
-    - name: Template simple web site to iis_site_path as index.html
+    - name: Site updated
       ansible.windows.win_template:
         src: 'index.html.j2'
         dest: '{{ item.path }}\index.html'
